--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -41,7 +41,7 @@
                                 </div>
 
                                 <div class="col-sm-6 text-right text-sm-center mt-5 mt-sm-0">
-                                    <a class="btn btn-link">Register</a>
+                                    <a class="btn btn-link" [routerLink]="['/'+ AppRoutes.register]">Register</a>
                                 </div>
                             </div>
                         </div>
