--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -55,7 +55,7 @@
                                 </div>
 
                                 <div class="col-sm-6 text-right text-sm-center mt-5 mt-sm-0">
-                                    <a ui-sref="login" class="btn btn-link">Login</a>
+                                    <a class="btn btn-link" [routerLink]="['/' + AppRoutes.login]">Login</a>
                                 </div>
                             </div>
                         </div>
