--- a/src/app/user-dashboard/example1/example1.component.html
+++ b/src/app/user-dashboard/example1/example1.component.html
@@ -4,6 +4,6 @@
     </h3>
 
     <div class="card-body">
-        Angular <em class="text-muted">(6.1.0)</em> Dashboard Boilerplate
+        Angular <em class="text-muted">6.1.5</em> Dashboard Boilerplate
     </div>
 </div>
